finalizando parte escrita do portflolio e colocando links

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -53,6 +53,9 @@ body {
 .destaque-do-titulo {
   color: var(--cor-destaque);
 }
+.destaque-do-texto {
+ color: var(--cor-de-texto); 
+}
 
 .apresentacao {
   padding: 2.5% 3%;
